--- a/src/scss/partials/_modal.scss
+++ b/src/scss/partials/_modal.scss
@@ -29,14 +29,14 @@
   @include align-items-center;
   @include justify-content-center;
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
+  //top: 0;
+  //left: 0;
+  //right: 0;
+  //bottom: 0;
+  //margin: auto;
   z-index: 9;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   text-align: center;
   pointer-events: none;
 }
